# Plantify-MachineLearning

./: .gitignore  Dockerfile  Dockerfile.local  docker-compose.dev.yml  docker-compose.gpu.dev.yml  docker-compose.prod.yml  function_app.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/gpu/: Dockerfile  devcontainer.json
.github/workflows/: azure-func-deployment.yml  azure-functions_plantify-ml.yml  main-protection.yml  pushImage.yml  uv-test.yml
.run/: Compile-grpc.run.xml  refresh-api.run.xml  run.run.xml
.scripts/: compile-grpc.sh  refresh-api.sh  setup-dev.sh
api/: plant_api_controller.py  pump_time_api_controller.py
config/: settings.py
csv-to-database/: send_data.py
database-to-csv/: export_data.py
datapreparation/: DataPrepGeneral-v2.ipynb  DataPreparationGeneral.ipynb  DataPreparationPumpTime.ipynb  PumpTime.ipynb  data_preparation.py  pump_time_kaggle.ipynb
datapreparation/database-to-csv/: export_data.py
datapreparation/indoor_dataset/: Light_converter.py  indoor_plant.ipynb  indoor_plant_classification.ipynb  indoor_plant_kmeans.ipynb  indoor_plant_preprocessing.py  indoor_plant_v1_classification.ipynb  indoor_plant_v2_clustering.ipynb  indoor_plant_with_clustering.ipynb  optimal_plant_conditions.csv
entities/: Plant.py  Sensor.py  Watering.py
grpc_clients/: plant_grpc_client.py
mockdata/: generate_data.py  generate_data_for_existing_users.py  trial_generate_real.py
models/: xgb_model.py
protos/: plant.proto  sensors.proto  watering.proto
tests/: test_grpc_client.py
(+23 files in other folders)
