[project]
name = "workspace"
version = "0.1.0"
description = "ML workspace"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "ipykernel>=6.29.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "protobuf>=4.25.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    # testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "kagglehub>=1.0.1",
    "optuna>=4.8.0",
    "ipywidgets>=8.1.8",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]
